--- a/Chinchillada.Behavior.Runtime.asmdef
+++ b/Chinchillada.Behavior.Runtime.asmdef
@@ -2,7 +2,9 @@
     "name": "ChinchilChinchillada.Behavior.Runtimeada.Sim.Runtime",
     "rootNamespace": "Chinchillada.Sim",
     "references": [
-        "GUID:1eaec2d7d70f722408cb2417d51f1005"
+        "GUID:1eaec2d7d70f722408cb2417d51f1005",
+        "GUID:343deaaf83e0cee4ca978e7df0b80d21",
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
